# Desktop-Client

./: .gitignore  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-release.yml  build-windows.yml  cargo-deny.yml  cert-pin-watchdog.yml  codeql.yml  tests.yml
docs/: CODE_SIGNING.md  E2E-SMOKE-TEST.md  IPV6-EMBRACE-PLAN.md  RELEASE-SECRETS.md  VERIFICATION.md  azure-trusted-signing-setup.md  store-listing.md  windows-code-signing.md  windows-smoke-test.md
scripts/: generate-cert-pins.sh  qa-checklist.ps1  setup-code-signing.ps1  sign-local.ps1  update-cert-pins.ps1
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  Entitlements.plist  app.manifest  build.rs  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: cert_pin.rs  client.rs  doh_resolver.rs  endpoints.rs  error.rs  mod.rs  tests.rs  types.rs
src-tauri/src/commands/: auth.rs  biometric.rs  killswitch.rs  mod.rs  servers.rs  settings.rs  speed_test.rs  split_tunnel.rs  tray.rs  updater.rs  vouchers.rs  vpn.rs  vpn_multi_hop.rs  vpn_port_forward.rs  window.rs
src-tauri/src/storage/: credentials.rs  mod.rs
src-tauri/src/utils/: elevation.rs  mod.rs  redact.rs  telemetry.rs
src-tauri/src/vpn/: auto_reconnect.rs  birdo_pq.rs  buffer_pool.rs  doh.rs  firewall_linux.rs  latency.rs  manager.rs  mod.rs  network_monitor.rs  rosenpass.rs  speed_test.rs  tests.rs  tunnel.rs  tunnel_dns.rs  tunnel_linux.rs  tunnel_macos.rs  wfp.rs  wireguard_new.rs  xray.rs
src/__mocks__/@tauri-apps/api/: core.ts
src/__tests__/: SpeedTest.test.tsx  SplitTunnel.test.tsx  ipc-contracts.test.ts
src/assets/fonts/: README.md
src/components/: AppShell.tsx  BottomNav.tsx  ConnectionButton.test.tsx  ConnectionButton.tsx  ConsentScreen.tsx  Dashboard.tsx  ErrorBoundary.tsx  Login.tsx  MultiHopCard.tsx  OfflineBanner.tsx  PixelCanvas.tsx  ServerList.test.tsx  ServerList.tsx  Settings.tsx  SplitTunnelCard.tsx  TitleBar.tsx  UpdateChecker.tsx  WindowControls.tsx  index.ts
src/components/birdo/: AppIconMark.tsx  Badge.tsx  Button.tsx  Card.tsx  CompactConnectButton.tsx  EmptyState.tsx  ListItem.tsx  ServerCard.tsx  ServerSelectorSheet.tsx  TextField.tsx  TopBar.tsx  WorldGlobe.tsx  index.ts
src/lib/: birdo-theme.ts
src/screens/: PortForward.tsx  Profile.tsx  ServerList.tsx  SplitTunnel.tsx  Subscription.tsx  VpnSettings.tsx
src/store/: app-store.test.ts  app-store.ts
src/styles/: fonts.css  globals.css
src/types/: world-atlas.d.ts
src/utils/: country-coords.ts  helpers.test.ts  helpers.ts  notifications.test.ts  notifications.ts
