[package]
name = "birdo-vpn-desktop"
version = "1.0.0"
description = "Birdo VPN Desktop Client (Windows & macOS)"
authors = ["Birdo VPN"]
license = "Proprietary"
edition = "2021"
rust-version = "1.77"

[lib]
name = "birdo_vpn_desktop_lib"
# Only rlib needed for Tauri - cdylib/staticlib cause C++ runtime linker errors
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
# Tauri
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-deep-link = "2.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.4"  # H-1: trait-object serialization for retry interceptor

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }

# Socket configuration (for buffer sizes)
socket2 = "0.5"

# Secure storage (Windows Credential Manager)
keyring = "3.2"

# Crypto (for WireGuard)
# Note: Using versions compatible with boringtun
chacha20poly1305 = "0.10"
blake2 = "0.10"
sha2 = "0.10"  # DLL integrity verification (already a transitive dep via tauri)
hmac = "0.12"  # FIX-1-7: Settings file HMAC integrity
hex = "0.4"    # FIX-1-7: Hex encoding for HMAC key storage
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory wiping

# Fast mutex for async-safe crypto operations (replaces std::sync::Mutex)
parking_lot = "0.12"

# WireGuard userspace implementation
boringtun = "0.6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System directories for crash reports
dirs = "6.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4.2"
once_cell = "1.19"
regex = "1"
which = "7.0"  # Find xray.exe binary in PATH
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
tauri-plugin-process = "2.2"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Rpc",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader"
] }

# Wintun driver bindings
wintun = "0.5"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# nix crate for utun/socket/ioctl operations
nix = { version = "0.29", features = ["net", "ioctl", "socket", "fs"] }
# System Configuration framework bindings
core-foundation = "0.10"
system-configuration = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Security patches for vulnerable transitive dependencies
# NOTE: boringtun 0.6 pins curve25519-dalek 4.0.0-rc.3 which has RUSTSEC-2024-0344
# This cannot be patched without forking boringtun. The vulnerability is a timing
# side-channel in Scalar29::sub - mitigated by FIX-1-1 client-side key generation
# (keys generated with OsRng are uniformly random, not attacker-controlled scalars).
# Monitor for boringtun 0.7 release or consider cloudflare/boringtun fork.
# [patch.crates-io]
# curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", tag = "curve25519-4.1.3" }
